Fix relative links

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "| **Week**           | **Topics**                        |\n",
     "| ------------------ | --------------------------------- |\n",
-    "| *Module 1*     | [Foundations][m1]|\n",
+    "| *Module 1*     | [Foundations](lessons/Module1/index.ipynb)|\n",
     "| *Module 2*     | [Introduction to Python][m2]|\n",
     "| *Module 3*     | [Introduction to Python Programming][m3]|\n",
     "| *Module 4*     | [Python Programming][m4]|\n",
@@ -35,7 +35,6 @@
     "\n",
     "-----\n",
     "\n",
-    "[m1]: lessons/Module1/index.ipynb\n",
     "[m2]: lessons/Module2/index.ipynb\n",
     "[m3]: lessons/Module3/index.ipynb\n",
     "[m4]: lessons/Module4/index.ipynb\n",
